objects/maps__TerritoryAggregation__c.object
<CustomObject>
    <fields>
        <fullName>maps__Avg__c</fullName>
        <label>Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__MAIOAggregatorKey__c</fullName>
        <label>MAIO Aggregator Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Max__c</fullName>
        <label>Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__Min__c</fullName>
        <label>Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__Reason__c</fullName>
        <label>Deactivation Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Sum__c</fullName>
        <label>Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__TerritoryAggregationSetting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Territory Aggregation Setting</label>
        <referenceTo>maps__TerritoryAggregationSetting__c</referenceTo>
        <relationshipLabel>Maps Territory Aggregations</relationshipLabel>
        <relationshipName>TerritoryAggregations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__TerritoryLayer__c</fullName>
        <label>Maps Territory Layer</label>
        <referenceTo>maps__Layer__c</referenceTo>
        <relationshipLabel>Maps Territory Aggregations</relationshipLabel>
        <relationshipName>TerritoryAggregations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>maps__TerritoryNode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Territory Node</label>
        <referenceTo>maps__TerritoryNode__c</referenceTo>
        <relationshipLabel>Maps Territory Aggregations</relationshipLabel>
        <relationshipName>TerritoryAggregations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Territory Aggregation</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Aggregations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>